number flickering fix

--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,12 @@
   --black:#131518;
   --dark-mode: #0A0C14;
   --light-grey:#CCD4DE;
+  --ligth-grey-sec: #ABAFB8;
   --dark-grey:#4C5158;
   --btn-blue:#13AFE0;
   --purple: #6558F2;
   --secondary: #695DED;
+  --heart: #F91880;
 }
 
 
